# cf-group-recommender-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
recommender-system/: configuration.py  experiments.py  flask_backend.py  recommender_example.py
recommender-system/datasets/: example_dataset.csv  experiment_groups.py
recommender-system/datasets/preproc_data/: custom_groups.py  obtain_dataset_information.py  process_datasets_uid.py  users_dict.pkl
recommender-system/recommender/: __init__.py  aggregator.py  algorithm.py  dataset.py  evaluator.py  group.py
recommender-system/recommender/aggregation_methods/: __init__.py  borderline_based.py  consensus_based.py  majority_based.py
recommender-system/recommender/algorithm_lib/: __init__.py  algorithm_base.py  caserec_model.py  surprise_model.py
recommender-system/results/: results_file.csv  results_file_example.csv
recommender-system/tests/: aggregator_tests.py  algorithms_tests.py  dataset_tests.py  evaluator_tests.py  group_tests.py
