[tool.poetry]
name = "cf-group-recommender-system"
version = "0.1.0"
description = ""
authors = ["adrixo <adrianvalrom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-surprise = "^1.1.1"
numpy = "^1.22.4"
pandas = "^1.4.2"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
